--- a/practica-2/index.html
+++ b/practica-2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bar Gourmet - Sabores Auténticos</title>
+    <title>Kayako</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="l-container">
                 <div class="nav__container">
                     <div class="nav__brand">
-                        <h1>Bar Gourmet</h1>
+                        <h1>Kayako</h1>
                     </div>
                     <input type="checkbox" class="nav__toggle-input" id="nav-toggle">
                     <label for="nav-toggle" class="nav__toggle">
@@ -40,8 +40,8 @@
             <div class="hero__overlay"></div>
             <div class="l-container">
                 <div class="hero__content">
-                    <h1 class="hero__title">Bar Gourmet</h1>
-                    <p class="hero__subtitle">Sabores auténticos en el corazón de la ciudad</p>
+                    <h1 class="hero__title">Kayako</h1>
+                    <p class="hero__subtitle">Chiringuito en Cuevas del Almanzora</p>
                     <button class="hero__cta btn btn--primary" onclick="document.getElementById('menu').scrollIntoView({behavior: 'smooth'})">Ver Menú</button>
                 </div>
             </div>
@@ -67,39 +67,41 @@
                 <h2 class="gallery__title">Nuestro Menú</h2>
                 <div class="gallery__layout">
                     <article class="card card--large">
-                        <div class="card__image-placeholder">🍔</div>
+                        <img src="images/imagen6.jpg" alt="Especialidad de la Casa" class="card__image">
                         <h3 class="card__title">Especialidad de la Casa</h3>
-                        <p class="card__description">Hamburguesa Gourmet con carne angus, queso manchego y salsa especial</p>
-                        <span class="card__price">€12.50</span>
+                        <p class="card__description">Brasas
+
+                        </p>
+                        <span class="card__price">€6.50</span>
                     </article>
                     <div class="l-grid l-grid--4-cols">
                         <article class="card card--small">
-                            <div class="card__image-placeholder">🍟</div>
-                            <h4 class="card__title">Tapas</h4>
-                            <p class="card__description">Bravas patatas</p>
+                            <img src="images/imagen1.jpg" alt="Tapas" class="card__image">
+                            <h4 class="card__title">Platos</h4>
+                            <p class="card__description">Salchipapa</p>
                             <span class="card__price">€4.50</span>
                         </article>
                         <article class="card card--small">
-                            <div class="card__image-placeholder">🍺</div>
+                            <img src="images/imagen2.jpg" alt="Bebidas" class="card__image">
                             <h4 class="card__title">Bebidas</h4>
                             <p class="card__description">Cerveza artesanal</p>
                             <span class="card__price">€3.00</span>
                         </article>
                         <article class="card card--small">
-                            <div class="card__image-placeholder">🍰</div>
+                            <img src="images/imagen3.jpg" alt="Postres" class="card__image">
                             <h4 class="card__title">Postres</h4>
                             <p class="card__description">Tarta de queso</p>
                             <span class="card__price">€5.00</span>
                         </article>
                         <article class="card card--small">
-                            <div class="card__image-placeholder">🥗</div>
+                            <img src="images/imagen4.jpg" alt="Ensaladas" class="card__image">
                             <h4 class="card__title">Ensaladas</h4>
                             <p class="card__description">César con pollo</p>
                             <span class="card__price">€8.50</span>
                         </article>
                     </div>
                     <article class="card card--large">
-                        <div class="card__image-placeholder">🍽️</div>
+                        <img src="images/imagen5.jpg" alt="Menú del Día" class="card__image">
                         <h3 class="card__title">Menú del Día</h3>
                         <p class="card__description">Primer plato, segundo plato, postre y bebida incluidos</p>
                         <span class="card__price">€15.00</span>
