--- a/web-res/index.html
+++ b/web-res/index.html
@@ -7,12 +7,34 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav>
-        
-    </nav>
+    <header>
+        <h1>Blog</h1>
+    <nav class="navbar" aria-label="Navegación principal">
 
+        <!-- Boton de Hamburguesa -->
+
+
+        <!-- Menu Principal (Horizontal)-->
+        <ul class="nav-menu">
+            <li class="nav-item"><a href="#">Inicio</a></li>
+            <li class="nav-item"><a href="#">Galeria</a></li>
+            <li class="nav-item"><a href="#">Cositas</a></li>
+            <li class="nav-item"><a href="#">FOrmulario</a></li>
+        </ul>
+
+    </nav>
+    </header>
+    <main>
     <div class="grid-container">
-        <div class="grid-item item-1">1</div>
+        <article class="grid-item item-1 blog-post">
+            <img src="./images/hombre.jpg" alt="Programación" class="blog-image">
+            <div class="blog-content">
+                <h2>Introducción a CSS Grid</h2>
+                <p class="blog-date">15 de Enero, 2024</p>
+                <p>CSS Grid revoluciona la forma en que creamos layouts web. Con esta poderosa herramienta podemos crear diseños complejos de manera sencilla...</p>
+                <a href="#" class="read-more">Leer más</a>
+            </div>
+        </article>
         <div class="grid-item item-2">2</div>
         <div class="grid-item item-3">3</div>
         <div class="grid-item item-4">4</div>
@@ -28,6 +50,7 @@
         <div class="grid-item item-14">14</div>
         <div class="grid-item item-15">15</div>
     </div>
-
+    </main>
+    <footer></footer>
 </body>
 </html>
