--- a/practica-2/index.html
+++ b/practica-2/index.html
@@ -121,8 +121,8 @@
                     </video>
                     <div class="video__overlay">
                         <div class="video__content">
-                            <h2>Experiencia Gastronómica Única</h2>
-                            <p>Descubre los sabores más auténticos en un ambiente acogedor</p>
+                            <h2>El mejor sitio para comer y pedir a domicilio</h2>
+                            <p>Disfruta en compañia de tu familia aqui o en casa</p>
                         </div>
                     </div>
                 </div>
@@ -177,15 +177,15 @@
                 <div class="map__container">
                     <iframe 
                         class="map__iframe"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3048.4037!2d-3.7037902!3d40.4167754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDI1JzAwLjQiTiAzwrA0MicxMy42Ilc!5e0!3m2!1ses!2ses!4v1234567890123" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d943.6112589176214!2d-1.8759653944244445!3d37.29709690214962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd652bfe810194ab%3A0x70cfd84fdf697782!2sKayaco!5e0!3m2!1ses!2ses!4v1764664759313!5m2!1ses!2ses" 
                         allowfullscreen="" 
                         loading="lazy">
                     </iframe>
                     <div class="map__info">
-                        <h3>📍 Bar Gourmet</h3>
-                        <p>📍 Calle Principal 123, Madrid</p>
+                        <h3>📍 Kayako</h3>
+                        <p>📍 Cuevas del Almanzora, Almeria</p>
                         <p>📞 +34 123 456 789</p>
-                        <p>✉️ info@bargourmet.com</p>
+                        <p>✉️ info@kayako.com</p>
                         <p>🕒 Lun-Dom: 12:00-24:00</p>
                         <p>🚗 Parking disponible</p>
                         <p>♿ Acceso PMR</p>
