--- a/web-res/index.html
+++ b/web-res/index.html
@@ -34,9 +34,27 @@
                 <a href="#" class="read-more">Leer más</a>
             </div>
         </article>
-        <div class="grid-item item-2">2</div>
-        <div class="grid-item item-3">3</div>
-        <div class="grid-item item-4">4</div>
+        <article class="grid-item item-2 blog-post">
+            <img src="./images/gabriel.jpg" alt="Diseño Web" class="blog-image">
+            <div class="blog-content">
+                <h2>Simio con su portatil</h2>
+                <p class="blog-date">22 de Febrero, 2024</p>
+                <p>Los simios han desarrollado capacidades supersonicas y ya saben programar</p>
+                <a href="#" class="read-more">Leer más</a> </div> </article>
+        <article class="grid-item item-3 blog-post"> 
+            <img src="./images/michipresidente.jpg" alt="Diseño Web" class="blog-image">
+            <div class="blog-content">
+                <h2>Nuevo candidato a las michi-elecciones</h2>
+                <p class="blog-date">17 de Abril, 2024</p>
+                <p>Un nuevo candidato llamado Catricio se ha presentado a las michi-elecciones del pais, un claro oponente para Miauribel, la candidata del partido contrario </p>
+                <a href="#" class="read-more">Leer más</a> </div></article>
+        <article class="grid-item item-4 blog-post"> 
+            <img src="./images/currata.jpg" alt="Diseño Web" class="blog-image">
+            <div class="blog-content">
+                <h2>El cura de Ratatonia da su ultima misa</h2>
+                <p class="blog-date">23 de Junio, 2024</p>
+                <p>El cura de Ratatonia, Ratoliver X, da su ultima misa antes de irse de mision a Villa del Atún, donde permanecera los proximos años </p>
+                <a href="#" class="read-more">Leer más</a> </div></article>
         <div class="grid-item item-5">5</div>
         <div class="grid-item item-6">6</div>
         <div class="grid-item item-7">7</div>
