--- a/web-res/index.html
+++ b/web-res/index.html
@@ -55,10 +55,59 @@
                 <p class="blog-date">23 de Junio, 2024</p>
                 <p>El cura de Ratatonia, Ratoliver X, da su ultima misa antes de irse de mision a Villa del Atún, donde permanecera los proximos años </p>
                 <a href="#" class="read-more">Leer más</a> </div></article>
-        <div class="grid-item item-5">5</div>
-        <div class="grid-item item-6">6</div>
-        <div class="grid-item item-7">7</div>
-        <div class="grid-item item-8">8</div>
+        <article class="grid-item item-5 blog-post">
+            <img src="./images/robotin.jpg" alt="Tecnología" class="blog-image">
+            <div class="blog-content">
+                <h2>Los robots domésticos invaden las cocinas</h2>
+                <p class="blog-date">8 de Julio, 2024</p>
+                <div class="blog-tags">
+                    <span class="tag">Tecnología</span>
+                    <span class="tag">Hogar</span>
+                    <span class="tag">Futuro</span>
+                </div>
+                <p>Una nueva generación de robots culinarios ha llegado para revolucionar nuestras cocinas. Lo mismo te cocinan una paella que unos macarrones con tomate</p>
+                <a href="#" class="read-more">Leer más</a>
+            </div>
+        </article>
+        <article class="grid-item item-6 blog-post">
+            <img src="./images/capi.jpg" alt="Deportes" class="blog-image">
+            <div class="blog-content">
+                <h2>Campeonato mundial de salto al lago para animales</h2>
+                <p class="blog-date">14 de Julio, 2024</p>
+                <div class="blog-tags">
+                    <span class="tag">Deportes</span>
+                    <span class="tag">Mascotas</span>
+                </div>
+                <p>El primer campeonato mundial de salto al lago se celebrará este verano. Participarán todo tipo de animales salvajes y domesticos</p>
+                <a href="#" class="read-more">Leer más</a>
+            </div>
+        </article>
+        <article class="grid-item item-7 blog-post">
+            <img src="./images/hamster.jpg" alt="Ciencia" class="blog-image">
+            <div class="blog-content">
+                <h2>Descubren nueva especie de hamster que programa en Python</h2>
+                <p class="blog-date">3 de Agosto, 2024</p>
+                <div class="blog-tags">
+                    <span class="tag">Ciencia</span>
+                    <span class="tag">Programación</span>
+                </div>
+                <p>Científicos marinos han descubierto una especie de hamster que puede escribir código Python básico usando sus patitas</p>
+                <a href="#" class="read-more">Leer más</a>
+            </div>
+        </article>
+        <article class="grid-item item-8 blog-post">
+            <img src="./images/robotito.jpg" alt="Entretenimiento" class="blog-image">
+            <div class="blog-content">
+                <h2>Festival de baile de robots en la plaza mayor</h2>
+                <p class="blog-date">12 de Septiembre, 2024</p>
+                <div class="blog-tags">
+                    <span class="tag">Entretenimiento</span>
+                    <span class="tag">Robots</span>
+                </div>
+                <p>Este fin de semana se celebra el primer festival de baile robótico. Los participantes mostrarán sus mejores movimientos de breakdance</p>
+                <a href="#" class="read-more">Leer más</a>
+            </div>
+        </article>
         <div class="grid-item item-9">9</div>
         <div class="grid-item item-10">10</div>
         <div class="grid-item item-11">11</div>
@@ -68,7 +117,8 @@
         <div class="grid-item item-15">15</div>
     </div>
     </main>
-    <footer></footer>
+    <footer>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
