--- a/web-res/index.html
+++ b/web-res/index.html
@@ -108,8 +108,53 @@
                 <a href="#" class="read-more">Leer más</a>
             </div>
         </article>
-        <div class="grid-item item-9">9</div>
-        <div class="grid-item item-10">10</div>
+        <article class="grid-item item-9 blog-post">
+            <img src="./images/perroestudia.jpg" alt="Educación" class="blog-image">
+            <div class="blog-content">
+                <h2>Universidad para mascotas abre sus puertas</h2>
+                <p class="blog-date">25 de Octubre, 2024</p>
+                <div class="blog-tags">
+                    <span class="tag">Educación</span>
+                    <span class="tag">Mascotas</span>
+                </div>
+                <p>La primera universidad especializada en educación superior para mascotas ha abierto sus puertas. Ofrecen carreras en matemáticas, literatura y arte</p>
+                <a href="#" class="read-more">Leer más</a>
+            </div>
+        </article>
+        <div class="grid-item item-10 stats-table">
+            <h3>Estadísticas del Blog</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Categoría</th>
+                        <th>Artículos</th>
+                        <th>Visitas</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Tecnología</td>
+                        <td>3</td>
+                        <td>25,840</td>
+                    </tr>
+                    <tr>
+                        <td>Ciencia</td>
+                        <td>2</td>
+                        <td>18,200</td>
+                    </tr>
+                    <tr>
+                        <td>Entretenimiento</td>
+                        <td>2</td>
+                        <td>15,600</td>
+                    </tr>
+                    <tr>
+                        <td>Deportes</td>
+                        <td>1</td>
+                        <td>9,870</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <div class="grid-item item-11">11</div>
         <div class="grid-item item-12">12</div>
         <div class="grid-item item-13">13</div>
